--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="mainHostingGrid">
                     <div class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" class="">
+                            <img src="img/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" class="">
                             <h3 class="hostingCardTitle">Hôtel du matin</h3>
                             <p class="hostingCardDesc">Nuit à partir de 25€</p>
                             <div class="star-rating">
@@ -77,7 +77,7 @@
                     </div>
                     <div class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" class="">
+                            <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="" class="">
                             <h3 class="hostingCardTitle">Hôtel du matin</h3>
                             <p class="hostingCardDesc">Nuit à partir de 25€</p>
                             <div class="star-rating">
@@ -91,7 +91,7 @@
                     </div>
                     <div class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" class="">
+                            <img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="" class="">
                             <h3 class="hostingCardTitle">Hôtel du matin</h3>
                             <p class="hostingCardDesc">Nuit à partir de 25€</p>
                             <div class="star-rating">
@@ -105,7 +105,7 @@
                     </div>
                     <div class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" class="">
+                            <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="" class="">
                             <h3 class="hostingCardTitle">Hôtel du matin</h3>
                             <p class="hostingCardDesc">Nuit à partir de 25€</p>
                             <div class="star-rating">
@@ -119,7 +119,7 @@
                     </div>
                     <div class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" class="">
+                            <img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" class="">
                             <h3 class="hostingCardTitle">Hôtel du matin</h3>
                             <p class="hostingCardDesc">Nuit à partir de 25€</p>
                             <div class="star-rating">
@@ -133,7 +133,7 @@
                     </div>
                     <div class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="" class="">
+                            <img src="img/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" class="">
                             <h3 class="hostingCardTitle">Hôtel du matin</h3>
                             <p class="hostingCardDesc">Nuit à partir de 25€</p>
                             <div class="star-rating">
@@ -161,7 +161,6 @@
                             <div class="popularHostingCardDesc">
                                 <h3 class="popularHostingCardTitle">Hôtel du matin</h3>
                                 <p class="popularHostingCardDesc">Nuit à partir de 25€</p>
-                                <div class="espace"></div>
                                 <div class="star-rating">
                                     <i class="fa fa-star checked"></i>
                                     <i class="fa fa-star checked"></i>
@@ -175,12 +174,11 @@
                     <div class="popularHostingCard">
                         <a href="" class="popularHostingCardContainer">
                             <div class="popularHostingImgContainer">
-                                <img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
+                                <img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
                             </div>
                             <div class="popularHostingCardDesc">
                                 <h3 class="popularHostingCardTitle">Hôtel du matin</h3>
                                 <p class="popularHostingCardDesc">Nuit à partir de 25€</p>
-                                <div class="espace"></div>
                                 <div class="star-rating">
                                     <i class="fa fa-star checked"></i>
                                     <i class="fa fa-star checked"></i>
@@ -194,12 +192,11 @@
                     <div class="popularHostingCard">
                         <a href="" class="popularHostingCardContainer">
                             <div class="popularHostingImgContainer">
-                                <img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
+                                <img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
                             </div>
                             <div class="popularHostingCardDesc">
                                 <h3 class="popularHostingCardTitle">Hôtel du matin</h3>
                                 <p class="popularHostingCardDesc">Nuit à partir de 25€</p>
-                                <div class="espace"></div>
                                 <div class="star-rating">
                                     <i class="fa fa-star checked"></i>
                                     <i class="fa fa-star checked"></i>
@@ -212,6 +209,37 @@
                     </div>
                 </div>
             </aside>
+        </section>
+        <section class="activities" id="activities">
+            <div class="activitiesTitle">
+                <h2>Activités à Marseille</h2>
+            </div>
+            <div class="activitiesContainer">
+                <div class="activitiesContainerCard">
+                    <div class="activitiesContainerCardImg">
+                        <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="">
+                    </div>
+                    <h3 class="">Vieux-Port</h3>
+                </div>
+                <div class="activitiesContainerCard">
+                    <div class="activitiesContainerCardImg">
+                        <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="">
+                    </div>
+                    <h3 class="">Vieux-Port</h3>
+                </div>
+                <div class="activitiesContainerCard">
+                    <div class="activitiesContainerCardImg">
+                        <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="">
+                    </div>
+                    <h3 class="">Vieux-Port</h3>
+                </div>
+                <div class="activitiesContainerCard">
+                    <div class="activitiesContainerCardImg">
+                        <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="">
+                    </div>
+                    <h3 class="">Vieux-Port</h3>
+                </div>
+            </div>
         </section>
     </main>
 </body>
