--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="mainHostingCard">
+                    <article class="mainHostingCard">
                         <a href="" class="">
                             <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="" class="">
                             <h3 class="hostingCardTitle">Hôtel du matin</h3>
@@ -88,8 +88,8 @@
                                 <i class="fa fa-star unchecked"></i>
                             </div>
                         </a>
-                    </div>
-                    <div class="mainHostingCard">
+                    </article>
+                    <article class="mainHostingCard">
                         <a href="" class="">
                             <img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="" class="">
                             <h3 class="hostingCardTitle">Hôtel du matin</h3>
@@ -102,8 +102,8 @@
                                 <i class="fa fa-star unchecked"></i>
                             </div>
                         </a>
-                    </div>
-                    <div class="mainHostingCard">
+                    </article>
+                    <article class="mainHostingCard">
                         <a href="" class="">
                             <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="" class="">
                             <h3 class="hostingCardTitle">Hôtel du matin</h3>
@@ -116,8 +116,8 @@
                                 <i class="fa fa-star unchecked"></i>
                             </div>
                         </a>
-                    </div>
-                    <div class="mainHostingCard">
+                    </article>
+                    <article class="mainHostingCard">
                         <a href="" class="">
                             <img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" class="">
                             <h3 class="hostingCardTitle">Hôtel du matin</h3>
@@ -130,8 +130,8 @@
                                 <i class="fa fa-star unchecked"></i>
                             </div>
                         </a>
-                    </div>
-                    <div class="mainHostingCard">
+                    </article>
+                    <article class="mainHostingCard">
                         <a href="" class="">
                             <img src="img/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" class="">
                             <h3 class="hostingCardTitle">Hôtel du matin</h3>
@@ -144,7 +144,7 @@
                                 <i class="fa fa-star unchecked"></i>
                             </div>
                         </a>
-                    </div>
+                    </article>
                 </div>
                 <footer class="mainHostingGridFooter">
                     <h3 class="">Afficher plus</h3>
@@ -153,7 +153,7 @@
             <aside class="popularHosting">
                 <h2 class="popularHostingTitle">Les plus populaires<i class="fa-solid fa-chart-line"></i></h2>
                 <div class="popularHostingGrid">
-                    <div class="popularHostingCard">
+                    <article class="popularHostingCard">
                         <a href="" class="popularHostingCardContainer">
                             <div class="popularHostingImgContainer">
                                 <img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
@@ -170,8 +170,8 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
-                    <div class="popularHostingCard">
+                    </article>
+                    <article class="popularHostingCard">
                         <a href="" class="popularHostingCardContainer">
                             <div class="popularHostingImgContainer">
                                 <img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
@@ -188,8 +188,8 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
-                    <div class="popularHostingCard">
+                    </article>
+                    <article class="popularHostingCard">
                         <a href="" class="popularHostingCardContainer">
                             <div class="popularHostingImgContainer">
                                 <img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
+                    </article>
                 </div>
             </aside>
         </section>
@@ -215,32 +215,50 @@
                 <h2>Activités à Marseille</h2>
             </div>
             <div class="activitiesContainer">
-                <div class="activitiesContainerCard">
+                <article class="activitiesContainerCard">
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="">
                     </div>
                     <h3 class="">Vieux-Port</h3>
-                </div>
-                <div class="activitiesContainerCard">
+                </article>
+                <article class="activitiesContainerCard">
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="">
                     </div>
                     <h3 class="">Vieux-Port</h3>
-                </div>
-                <div class="activitiesContainerCard">
+                </article>
+                <article class="activitiesContainerCard">
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="">
                     </div>
                     <h3 class="">Vieux-Port</h3>
-                </div>
-                <div class="activitiesContainerCard">
+                </article>
+                <article class="activitiesContainerCard">
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="">
                     </div>
                     <h3 class="">Vieux-Port</h3>
-                </div>
+                </article>
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="about">
+            <h3>À propos</h3>
+            <p>Fonctionnement du site</p>
+            <p>Conditions générales</p>
+            <p>Données et confidentialité</p>
+        </div>
+        <div class="ourHosting">
+            <h3>Nos hébergements</h3>
+            <p>Charte qualité</p>
+            <p>Proposer votre hôtel</p>
+        </div>
+        <div class="help">
+            <h3>Assistance</h3>
+            <p>Centre d'aide</p>
+            <p>Nous contacter</p>
+        </div>
+    </footer>
 </body>
 </html>
