Ajustements section activités: titres, padding, taille d'image

--- a/index.html
+++ b/index.html
@@ -219,25 +219,25 @@
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="" class="">
                     </div>
-                    <h3 class="">Vieux-Port</h3>
+                    <h4>Vieux-Port</h4>
                 </article>
                 <article class="activitiesContainerCard">
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" class="">
                     </div>
-                    <h3 class="">Vieux-Port</h3>
+                    <h4>Fort de Pomègues</h4>
                 </article>
                 <article class="activitiesContainerCard">
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="" class="">
                     </div>
-                    <h3 class="">Vieux-Port</h3>
+                    <h4>Parc national des Calanques</h4>
                 </article>
                 <article class="activitiesContainerCard">
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="">
                     </div>
-                    <h3 class="">Vieux-Port</h3>
+                    <h4>Notre-Dame-de-la-Garde</h4>
                 </article>
             </div>
         </section>
