Changements noms&prix herbergements, + ajustement margin description + ajout Alt sur img

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <div class="mainHostingGrid">
                     <div class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" class="">
-                            <h3 class="hostingCardTitle">Hôtel du matin</h3>
+                            <img src="img/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière" class="">
+                            <h3 class="hostingCardTitle">Auberge La Cannebière</h3>
                             <p class="hostingCardDesc">Nuit à partir de 25€</p>
                             <div class="star-rating">
                                 <i class="fa fa-star checked"></i>
@@ -77,9 +77,9 @@
                     </div>
                     <article class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" class="">
-                            <h3 class="hostingCardTitle">Hôtel du matin</h3>
-                            <p class="hostingCardDesc">Nuit à partir de 25€</p>
+                            <img src="img/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" class="">
+                            <h3 class="hostingCardTitle">Hôtel du port</h3>
+                            <p class="hostingCardDesc">Nuit à partir de 52€</p>
                             <div class="star-rating">
                                 <i class="fa fa-star checked"></i>
                                 <i class="fa fa-star checked"></i>
@@ -91,9 +91,9 @@
                     </article>
                     <article class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="" class="">
-                            <h3 class="hostingCardTitle">Hôtel du matin</h3>
-                            <p class="hostingCardDesc">Nuit à partir de 25€</p>
+                            <img src="img/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" class="">
+                            <h3 class="hostingCardTitle">Hôtel Les mouettes</h3>
+                            <p class="hostingCardDesc">Nuit à partir de 76€</p>
                             <div class="star-rating">
                                 <i class="fa fa-star checked"></i>
                                 <i class="fa fa-star checked"></i>
@@ -105,9 +105,9 @@
                     </article>
                     <article class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="" class="">
-                            <h3 class="hostingCardTitle">Hôtel du matin</h3>
-                            <p class="hostingCardDesc">Nuit à partir de 25€</p>
+                            <img src="img/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" class="">
+                            <h3 class="hostingCardTitle">Hôtel de la mer</h3>
+                            <p class="hostingCardDesc">Nuit à partir de 46€</p>
                             <div class="star-rating">
                                 <i class="fa fa-star checked"></i>
                                 <i class="fa fa-star checked"></i>
@@ -119,9 +119,9 @@
                     </article>
                     <article class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="" class="">
-                            <h3 class="hostingCardTitle">Hôtel du matin</h3>
-                            <p class="hostingCardDesc">Nuit à partir de 25€</p>
+                            <img src="img/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" class="">
+                            <h3 class="hostingCardTitle">Auberge Le Panier</h3>
+                            <p class="hostingCardDesc">Nuit à partir de 23€</p>
                             <div class="star-rating">
                                 <i class="fa fa-star checked"></i>
                                 <i class="fa fa-star checked"></i>
@@ -133,9 +133,9 @@
                     </article>
                     <article class="mainHostingCard">
                         <a href="" class="">
-                            <img src="img/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="" class="">
-                            <h3 class="hostingCardTitle">Hôtel du matin</h3>
-                            <p class="hostingCardDesc">Nuit à partir de 25€</p>
+                            <img src="img/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel Chez Amina" class="">
+                            <h3 class="hostingCardTitle">Hôtel Chez Amina</h3>
+                            <p class="hostingCardDesc">Nuit à partir de 96€</p>
                             <div class="star-rating">
                                 <i class="fa fa-star checked"></i>
                                 <i class="fa fa-star checked"></i>
@@ -146,8 +146,8 @@
                         </a>
                     </article>
                 </div>
-                <footer class="mainHostingGridFooter">
-                    <h3 class="">Afficher plus</h3>
+                <footer>
+                    <h3 class="mainHostingGridFooterTitle">Afficher plus</h3>
                 </footer>
             </div>
             <aside class="popularHosting">
