--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@
                                 <img src="img/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
                             </div>
                             <div class="popularHostingCardDesc">
-                                <h3 class="popularHostingCardTitle">Hôtel du matin</h3>
-                                <p class="popularHostingCardDesc">Nuit à partir de 25€</p>
+                                <div>
+                                    <h3 class="hostingCardTitle">Hôtel Le soleil du matin</h3>
+                                    <p class="hostingCardDesc">Nuit à partir de 128€</p>
+                                </div>
                                 <div class="star-rating">
                                     <i class="fa fa-star checked"></i>
                                     <i class="fa fa-star checked"></i>
@@ -177,8 +179,10 @@
                                 <img src="img/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
                             </div>
                             <div class="popularHostingCardDesc">
-                                <h3 class="popularHostingCardTitle">Hôtel du matin</h3>
-                                <p class="popularHostingCardDesc">Nuit à partir de 25€</p>
+                                <div>
+                                    <h3 class="hostingCardTitle">Chambres d'hôtes Au coeur de l'eau</h3>
+                                    <p class="hostingCardDesc">Nuit à partir de 71€</p>
+                                </div>
                                 <div class="star-rating">
                                     <i class="fa fa-star checked"></i>
                                     <i class="fa fa-star checked"></i>
@@ -195,8 +199,10 @@
                                 <img src="img/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
                             </div>
                             <div class="popularHostingCardDesc">
-                                <h3 class="popularHostingCardTitle">Hôtel du matin</h3>
-                                <p class="popularHostingCardDesc">Nuit à partir de 25€</p>
+                                <div>
+                                    <h3 class="hostingCardTitle">Hôtel Bleu et Blanc</h3>
+                                    <p class="hostingCardDesc">Nuit à partir de 68€</p>
+                                </div>
                                 <div class="star-rating">
                                     <i class="fa fa-star checked"></i>
                                     <i class="fa fa-star checked"></i>
@@ -229,7 +235,7 @@
                 </article>
                 <article class="activitiesContainerCard">
                     <div class="activitiesContainerCardImg">
-                        <img src="img/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="" class="">
+                        <img src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="" class="">
                     </div>
                     <h4>Parc national des Calanques</h4>
                 </article>
