--- a/index.html
+++ b/index.html
@@ -225,25 +225,33 @@
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="" class="">
                     </div>
-                    <h4>Vieux-Port</h4>
+                    <div class="activitiesContainerCardTitle">
+                        <h4>Vieux-Port</h4>
+                    </div>
                 </article>
                 <article class="activitiesContainerCard">
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" class="">
                     </div>
-                    <h4>Fort de Pomègues</h4>
+                    <div class="activitiesContainerCardTitle">
+                        <h4>Fort de Pomègues</h4>
+                    </div>    
                 </article>
                 <article class="activitiesContainerCard">
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="" class="">
                     </div>
-                    <h4>Parc national des Calanques</h4>
+                    <div class="activitiesContainerCardTitle">
+                        <h4>Parc national des Calanques</h4>
+                    </div>
                 </article>
                 <article class="activitiesContainerCard">
                     <div class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="">
                     </div>
-                    <h4>Notre-Dame-de-la-Garde</h4>
+                    <div class="activitiesContainerCardTitle">
+                        <h4>Notre-Dame-de-la-Garde</h4>
+                    </div>
                 </article>
             </div>
         </section>
