Refonte activité + responsive design

--- a/index.html
+++ b/index.html
@@ -216,43 +216,35 @@
                 </div>
             </aside>
         </section>
-        <section class="activities" id="activities">
-            <div class="activitiesTitle">
+        <section class="activities">
+            <div id="activities" class="activitiesTitle">
                 <h2>Activités à Marseille</h2>
             </div>
             <div class="activitiesContainer">
-                <article class="activitiesContainerCard">
-                    <div class="activitiesContainerCardImg">
-                        <img src="img/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="" class="">
-                    </div>
-                    <div class="activitiesContainerCardTitle">
-                        <h4>Vieux-Port</h4>
-                    </div>
-                </article>
-                <article class="activitiesContainerCard">
-                    <div class="activitiesContainerCardImg">
-                        <img src="img/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="" class="">
-                    </div>
-                    <div class="activitiesContainerCardTitle">
-                        <h4>Fort de Pomègues</h4>
-                    </div>    
-                </article>
-                <article class="activitiesContainerCard">
-                    <div class="activitiesContainerCardImg">
-                        <img src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="" class="">
-                    </div>
-                    <div class="activitiesContainerCardTitle">
-                        <h4>Parc national des Calanques</h4>
-                    </div>
-                </article>
-                <article class="activitiesContainerCard">
-                    <div class="activitiesContainerCardImg">
-                        <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="" class="">
-                    </div>
-                    <div class="activitiesContainerCardTitle">
-                        <h4>Notre-Dame-de-la-Garde</h4>
-                    </div>
-                </article>
+                <a href="" class="activitiesContainerCard">
+                    <figure class="activitiesContainerCardImg">
+                        <img src="img/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port de marseille">
+                        <figcaption>Vieux Port</figcaption>
+                </figure>
+                </a>
+                <a href="" class="activitiesContainerCard">
+                    <figure class="activitiesContainerCardImg">
+                        <img src="img/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="vieux port de marseille">
+                        <figcaption>Fort de Pomègues</figcaption>
+                </figure>
+                </a>
+                <a href="" class="activitiesContainerCard">
+                    <figure class="activitiesContainerCardImg">
+                        <img src="img/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="vieux port de marseille">
+                        <figcaption>Parc National des Calanques</figcaption>
+                </figure>
+                </a>
+                <a href="" class="activitiesContainerCard">
+                    <figure class="activitiesContainerCardImg">
+                        <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="vieux port de marseille">
+                        <figcaption>Notre-Dame-de-la-Garde</figcaption>
+                </figure>
+                </a>
             </div>
         </section>
     </main>
