--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
             </div>
         </section>
         <div class="result">
-            <p><i class="fa-solid fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+            <div class="resultIcon">
+                <i class="fa-solid fa-info"></i>
+            </div>
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
         <section class="hosting" id="hosting">
             <div class="mainHosting">
