--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <article class="popularHostingCard">
                         <a href="" class="popularHostingCardContainer">
                             <div class="popularHostingImgContainer">
-                                <img src="img/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
+                                <img src="img/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
                             </div>
                             <div class="popularHostingCardDesc">
                                 <div>
@@ -179,7 +179,7 @@
                     <article class="popularHostingCard">
                         <a href="" class="popularHostingCardContainer">
                             <div class="popularHostingImgContainer">
-                                <img src="img/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
+                                <img src="img/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
                             </div>
                             <div class="popularHostingCardDesc">
                                 <div>
@@ -199,7 +199,7 @@
                     <article class="popularHostingCard">
                         <a href="" class="popularHostingCardContainer">
                             <div class="popularHostingImgContainer">
-                                <img src="img/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
+                                <img src="img/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
                             </div>
                             <div class="popularHostingCardDesc">
                                 <div>
@@ -226,25 +226,25 @@
             <div class="activitiesContainer">
                 <a href="" class="activitiesContainerCard">
                     <figure class="activitiesContainerCardImg">
-                        <img src="img/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port de marseille">
+                        <img src="img/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
                         <figcaption>Vieux Port</figcaption>
                 </figure>
                 </a>
                 <a href="" class="activitiesContainerCard">
                     <figure class="activitiesContainerCardImg">
-                        <img src="img/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="vieux port de marseille">
+                        <img src="img/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                         <figcaption>Fort de Pomègues</figcaption>
                 </figure>
                 </a>
                 <a href="" class="activitiesContainerCard">
                     <figure class="activitiesContainerCardImg">
-                        <img src="img/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="vieux port de marseille">
+                        <img src="img/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
                         <figcaption>Parc National des Calanques</figcaption>
                 </figure>
                 </a>
                 <a href="" class="activitiesContainerCard">
                     <figure class="activitiesContainerCardImg">
-                        <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="vieux port de marseille">
+                        <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                         <figcaption>Notre-Dame-de-la-Garde</figcaption>
                 </figure>
                 </a>
