Nettoyage code html & créationd 'un dossier CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Booki.com</title>
 </head>
@@ -65,7 +65,7 @@
                 <h2 class="mainHostingTitle">Hébergements à Marseille</h2>
                 <div class="mainHostingGrid">
                     <div class="mainHostingCard">
-                        <a href="" class="">
+                        <a href="#">
                             <img src="img/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière" class="">
                             <h3 class="hostingCardTitle">Auberge La Cannebière</h3>
                             <p class="hostingCardDesc">Nuit à partir de 25€</p>
@@ -79,7 +79,7 @@
                         </a>
                     </div>
                     <article class="mainHostingCard">
-                        <a href="" class="">
+                        <a href="#">
                             <img src="img/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" class="">
                             <h3 class="hostingCardTitle">Hôtel du port</h3>
                             <p class="hostingCardDesc">Nuit à partir de 52€</p>
@@ -93,7 +93,7 @@
                         </a>
                     </article>
                     <article class="mainHostingCard">
-                        <a href="" class="">
+                        <a href="#">
                             <img src="img/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" class="">
                             <h3 class="hostingCardTitle">Hôtel Les mouettes</h3>
                             <p class="hostingCardDesc">Nuit à partir de 76€</p>
@@ -107,7 +107,7 @@
                         </a>
                     </article>
                     <article class="mainHostingCard">
-                        <a href="" class="">
+                        <a href="#">
                             <img src="img/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" class="">
                             <h3 class="hostingCardTitle">Hôtel de la mer</h3>
                             <p class="hostingCardDesc">Nuit à partir de 46€</p>
@@ -121,7 +121,7 @@
                         </a>
                     </article>
                     <article class="mainHostingCard">
-                        <a href="" class="">
+                        <a href="#">
                             <img src="img/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" class="">
                             <h3 class="hostingCardTitle">Auberge Le Panier</h3>
                             <p class="hostingCardDesc">Nuit à partir de 23€</p>
@@ -135,7 +135,7 @@
                         </a>
                     </article>
                     <article class="mainHostingCard">
-                        <a href="" class="">
+                        <a href="#">
                             <img src="img/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel Chez Amina" class="">
                             <h3 class="hostingCardTitle">Hôtel Chez Amina</h3>
                             <p class="hostingCardDesc">Nuit à partir de 96€</p>
@@ -157,7 +157,7 @@
                 <h2 class="popularHostingTitle">Les plus populaires<i class="fa-solid fa-chart-line"></i></h2>
                 <div class="popularHostingGrid">
                     <article class="popularHostingCard">
-                        <a href="" class="popularHostingCardContainer">
+                        <a href="#" class="popularHostingCardContainer">
                             <div class="popularHostingImgContainer">
                                 <img src="img/hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
                             </div>
@@ -177,7 +177,7 @@
                         </a>
                     </article>
                     <article class="popularHostingCard">
-                        <a href="" class="popularHostingCardContainer">
+                        <a href="#" class="popularHostingCardContainer">
                             <div class="popularHostingImgContainer">
                                 <img src="img/hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
                             </div>
@@ -197,7 +197,7 @@
                         </a>
                     </article>
                     <article class="popularHostingCard">
-                        <a href="" class="popularHostingCardContainer">
+                        <a href="#" class="popularHostingCardContainer">
                             <div class="popularHostingImgContainer">
                                 <img src="img/hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
                             </div>
@@ -224,25 +224,25 @@
                 <h2>Activités à Marseille</h2>
             </div>
             <div class="activitiesContainer">
-                <a href="" class="activitiesContainerCard">
+                <a href="#" class="activitiesContainerCard">
                     <figure class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port">
                         <figcaption>Vieux Port</figcaption>
                 </figure>
                 </a>
-                <a href="" class="activitiesContainerCard">
+                <a href="#" class="activitiesContainerCard">
                     <figure class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                         <figcaption>Fort de Pomègues</figcaption>
                 </figure>
                 </a>
-                <a href="" class="activitiesContainerCard">
+                <a href="#" class="activitiesContainerCard">
                     <figure class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
                         <figcaption>Parc National des Calanques</figcaption>
                 </figure>
                 </a>
-                <a href="" class="activitiesContainerCard">
+                <a href="#" class="activitiesContainerCard">
                     <figure class="activitiesContainerCardImg">
                         <img src="img/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                         <figcaption>Notre-Dame-de-la-Garde</figcaption>
