--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="mainHostingGrid">
                     <div class="mainHostingCard">
                         <a href="#">
-                            <img src="img/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière" class="">
+                            <img src="img/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière">
                             <h3 class="hostingCardTitle">Auberge La Cannebière</h3>
                             <p class="hostingCardDesc">Nuit à partir de 25€</p>
                             <div class="star-rating">
@@ -80,7 +80,7 @@
                     </div>
                     <article class="mainHostingCard">
                         <a href="#">
-                            <img src="img/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" class="">
+                            <img src="img/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
                             <h3 class="hostingCardTitle">Hôtel du port</h3>
                             <p class="hostingCardDesc">Nuit à partir de 52€</p>
                             <div class="star-rating">
@@ -94,7 +94,7 @@
                     </article>
                     <article class="mainHostingCard">
                         <a href="#">
-                            <img src="img/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" class="">
+                            <img src="img/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
                             <h3 class="hostingCardTitle">Hôtel Les mouettes</h3>
                             <p class="hostingCardDesc">Nuit à partir de 76€</p>
                             <div class="star-rating">
@@ -108,7 +108,7 @@
                     </article>
                     <article class="mainHostingCard">
                         <a href="#">
-                            <img src="img/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" class="">
+                            <img src="img/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
                             <h3 class="hostingCardTitle">Hôtel de la mer</h3>
                             <p class="hostingCardDesc">Nuit à partir de 46€</p>
                             <div class="star-rating">
@@ -122,7 +122,7 @@
                     </article>
                     <article class="mainHostingCard">
                         <a href="#">
-                            <img src="img/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" class="">
+                            <img src="img/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
                             <h3 class="hostingCardTitle">Auberge Le Panier</h3>
                             <p class="hostingCardDesc">Nuit à partir de 23€</p>
                             <div class="star-rating">
@@ -136,7 +136,7 @@
                     </article>
                     <article class="mainHostingCard">
                         <a href="#">
-                            <img src="img/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel Chez Amina" class="">
+                            <img src="img/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel Chez Amina">
                             <h3 class="hostingCardTitle">Hôtel Chez Amina</h3>
                             <p class="hostingCardDesc">Nuit à partir de 96€</p>
                             <div class="star-rating">
